--- a/app/src/main/res/layout/fragment_shopping_lists.xml
+++ b/app/src/main/res/layout/fragment_shopping_lists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@android:color/white"
     tools:context="com.example.shoppinglist.view.ShoppingListsFragment">
 
     <GridLayout
@@ -12,23 +12,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="20dp"
-        android:numColumns="2"
+        android:columnCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/addButton"
-            android:layout_height="200dp"
             android:layout_width="150dp"
-            android:background="@color/card_background"
+            android:layout_height="243dp"
             android:layout_columnWeight="1"
             android:layout_gravity="center_horizontal"
+            android:background="@color/card_background"
             android:scaleType="fitCenter"
-            android:src="@drawable/baseline_add"
-            />
-
+            android:src="@android:drawable/ic_input_add" />
 
     </GridLayout>
 
@@ -38,7 +36,7 @@
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
