--- a/app/src/main/res/layout/fragment_shopping_lists.xml
+++ b/app/src/main/res/layout/fragment_shopping_lists.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/card_background"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_input_add" />
+            android:src="@drawable/baseline_add" />
 
     </GridLayout>
 
