--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="card_background">#FFDF80</color>
+    <color name="add_button">#4CAF50</color>
+    <color name="item_background">#F1F1F1</color>
+    <color name="remove_item">#DF3F3F</color>
 </resources>
