--- a/app/src/main/res/layout/fragment_shopping_list_detail.xml
+++ b/app/src/main/res/layout/fragment_shopping_list_detail.xml
@@ -2,8 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shoppinglist.view.ShoppingListDetailFragment"
+    android:background="@color/white"
+    tools:context="com.example.shoppinglist.view.ShoppingListDetailFragment">
 
-    android:background="@color/black"/>
+
+    <TextView
+        android:id="@+id/tittleList"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@color/card_background"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="noe" />
+
+    <TextView
+        android:id="@+id/descriptionList"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="@color/card_background"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tittleList"
+        tools:text="Description of the list" />
+
+    <EditText
+        android:id="@+id/addItemText"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:hint="add new item"
+        app:layout_constraintEnd_toStartOf="@id/addItemButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionList" />
+
+    <ImageButton
+        android:id="@+id/addItemButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/add_button"
+        android:src="@drawable/baseline_add"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/addItemText"
+        app:layout_constraintTop_toBottomOf="@id/descriptionList" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
