--- a/app/src/main/res/layout/fragment_shopping_lists.xml
+++ b/app/src/main/res/layout/fragment_shopping_lists.xml
@@ -9,8 +9,9 @@
 
     <GridLayout
         android:id="@+id/listContainer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_margin="20dp"
         android:columnCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +27,8 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/card_background"
             android:scaleType="fitCenter"
-            android:src="@drawable/baseline_add" />
+            android:src="@drawable/baseline_add"
+            android:layout_margin="10dp"/>
 
     </GridLayout>
 
@@ -37,6 +39,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
