--- a/app/src/main/res/layout/item_list_card.xml
+++ b/app/src/main/res/layout/item_list_card.xml
@@ -6,7 +6,7 @@
     xmlns:layout_gravity="http://schemas.android.com/apk/res-auto"
     android:background="@color/item_background"
     android:padding="10dp"
-    android:weight="1"
+    android:layout_weight="1"
     android:baselineAligned="false">
 
     <LinearLayout
@@ -23,23 +23,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Item's name"
-            android:textSize="25sp"
+            android:textSize="28sp"
             android:layout_marginEnd="20dp"/>
 
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleX="2.90"
-            android:scaleY="2.90"
-            android:layout_marginEnd="20dp"/>
+            android:scaleX="2.20"
+            android:scaleY="2.20"
+            android:layout_marginEnd="10dp"/>
 
         <ImageButton
             android:id="@+id/removeItem"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@color/remove_item"
-            android:src="@drawable/baseline_add"
+            android:src="@drawable/baseline_remove"
             android:layout_gravity="center_vertical"
             android:gravity="center"
             android:scaleType="fitCenter"
